# python-rust-demo

./: Cargo.toml  pyproject.toml
.github/workflows/: build.yaml
python/madet/: __init__.py
python/python_rust_demo/: classes.py  classes.pyi  functions.py  functions.pyi
src/: classes.rs  functions.rs  lib.rs
